// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag href renders as an anchor 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<a
    class="emotion-1"
    data-testid="tag"
    href="#"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </a>
</DocumentFragment>
`;

exports[`Tag href renders in disable state with an anchor 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: #f0f0f0;
  color: #9c9c9c;
  border-color: #cccccc;
  border-radius: 0;
}

<a
    class="emotion-1"
    data-testid="tag"
    disabled=""
    href="#"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </a>
</DocumentFragment>
`;

exports[`Tag renders a tag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-1 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-1:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-1:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders in disabled state 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 40px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Medium size 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 24px;
  padding: 4px 8px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;

exports[`Tag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-1:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-1:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-1:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-1:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

<span
    class="emotion-1"
    data-testid="tag"
  >
    <div
      class="emotion-0"
      wrap="nowrap"
    />
  </span>
</DocumentFragment>
`;
